Cropped a few select images so that image pairs matched in height. I've also amended the gallery layout so that Bootstrap thumbnails are no longer used.

--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -83,6 +83,10 @@ p {
 	text-align:			justify;
 }
 
+.gallery-image {
+	margin-bottom: 20px;
+}
+
 .footer img {
 	height:				100px;
 }
